foxtrick.properties: remove deprecated entries and reorder.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6068 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/be/foxtrick.properties
+++ b/content/locale/be/foxtrick.properties
@@ -411,7 +411,7 @@ foxtrick.LeagueNewsFilter.PAs=Паведамленьні для прэсы
 foxtrick.ShortPAs.more=болей..
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=перайсьці
+button.go=перайсьці
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Націсьніце значак 'Захаваць' на наступнай старонцы, каб пакінуць гэты форум.
@@ -884,14 +884,14 @@ foxtrick.prefs.stagepref=Адключаць FoxTrick на сэрверах Stage
 foxtrick.prefs.disableTemporaryLabel=Часова адключыць FoxTrick
 foxtrick.prefs.saved=Налады захаваныя!
 
-foxtrick.prefs.buttonSave=Захаваць
+button.save=Захаваць
 foxtrick.prefs.buttonCancel=Адмена
 foxtrick.prefs.buttonExample=Прыклад
-foxtrick.prefs.buttonCustomize=Наладзіць
-foxtrick.prefs.buttonCleanupBranch=Вярнуць па-змаўчаньні
-foxtrick.prefs.buttonDisableAll=Адключыць усё
-foxtrick.prefs.buttonSavePrefs=Захаваць
-foxtrick.prefs.buttonLoadPrefs=Загрузіць
+button.customize=Наладзіць
+button.restoreDefault=Вярнуць па-змаўчаньні
+button.disableAll=Адключыць усё
+button.export=Захаваць
+button.import=Загрузіць
 foxtrick.prefs.activeCurrencyConverter=Актывіраваць канвертэр валюта
 
 about.headDevelopers=Галоўныя распрацоўшчыкі
