--- a/content/locale/bg/foxtrick.properties
+++ b/content/locale/bg/foxtrick.properties
@@ -114,7 +114,7 @@ foxtrick.TeamStats.countries.label=Country overview
 foxtrick.TeamStats.totalTSI.label=TOTAL TSI
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=goto
+button.go=goto
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Click on the 'Save' button on the next page to leave this forum.
@@ -400,12 +400,12 @@ foxtrick.prefs.captionDisableSettings=Disable Foxtrick
 foxtrick.prefs.stagepref=Disable Foxtrick on Stage server
 foxtrick.prefs.disableTemporaryLabel=Disable Foxtrick temporary
 
-foxtrick.prefs.buttonSave=Save
+button.save=Save
 foxtrick.prefs.buttonCancel=Cancel
-foxtrick.prefs.buttonCleanupBranch=Restore defaults
-foxtrick.prefs.buttonDisableAll=Disable all
-foxtrick.prefs.buttonSavePrefs=Save
-foxtrick.prefs.buttonLoadPrefs=Load
+button.restoreDefault=Restore defaults
+button.disableAll=Disable all
+button.export=Save
+button.import=Load
 foxtrick.prefs.captionSkinSettings=Custom hattrick CSS skin
 foxtrick.prefs.skinButtonSelectFile=Select CSS file
 foxtrick.prefs.activeSkin=Activated skin
