--- a/content/locale/bs/foxtrick.properties
+++ b/content/locale/bs/foxtrick.properties
@@ -438,7 +438,7 @@ foxtrick.LeagueNewsFilter.PAs=Izjave za štampu
 foxtrick.ShortPAs.more=više..
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=Idi na post
+button.go=Idi na post
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Kliknite na opciju 'Sačuvaj' na narednoj stranici da bi napustili ovaj forum.
@@ -901,14 +901,14 @@ foxtrick.prefs.labelFoxtrickFirstRun=Odaberite verziju za koju želite da u MojH
 foxtrick.prefs.stagepref=Isključi na STAGE serveru
 foxtrick.prefs.disableTemporaryLabel=Privremeno isključi
 
-foxtrick.prefs.buttonSave=Sačuvaj
+button.save=Sačuvaj
 foxtrick.prefs.buttonCancel=Odustani
 foxtrick.prefs.buttonExample=Primjer
-foxtrick.prefs.buttonCustomize=Prilagodi
-foxtrick.prefs.buttonCleanupBranch=Vrati početno
-foxtrick.prefs.buttonDisableAll=Isključi sve
-foxtrick.prefs.buttonSavePrefs=Snimi
-foxtrick.prefs.buttonLoadPrefs=Učitaj
+button.customize=Prilagodi
+button.restoreDefault=Vrati početno
+button.disableAll=Isključi sve
+button.export=Snimi
+button.import=Učitaj
 foxtrick.prefs.activeCurrencyConverter=Omogući konvertor valute
 
 delete_foxtrick_branches_ask=Zaista želite obrisati sve sačuvane karakteristike?\nFirefox se mora restartovati da bi promjena stupila na snagu!
