--- a/content/locale/cs/foxtrick.properties
+++ b/content/locale/cs/foxtrick.properties
@@ -432,7 +432,7 @@ foxtrick.LeagueNewsFilter.PAs=Tisková prohlášení
 foxtrick.ShortPAs.more=Více...
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=Zobraz
+button.go=Zobraz
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Pro opuštění této konference klikni na další stránce na tlačítko 'Uložit'.
@@ -884,14 +884,14 @@ foxtrick.prefs.labelFoxtrickFirstRun=Zvolte referenční verzi, vzhledem ke kter
 foxtrick.prefs.stagepref=Vypnout na serveru Stage
 foxtrick.prefs.disableTemporaryLabel=Dočasně vypnout
 
-foxtrick.prefs.buttonSave=Uložit
+button.save=Uložit
 foxtrick.prefs.buttonCancel=Zrušit
 foxtrick.prefs.buttonReset=Resetovat
-foxtrick.prefs.buttonCustomize=Přizpůsobit
-foxtrick.prefs.buttonCleanupBranch=Původní nastavení
-foxtrick.prefs.buttonDisableAll=Vypnout vše
-foxtrick.prefs.buttonSavePrefs=Uložit
-foxtrick.prefs.buttonLoadPrefs=Nahrát
+button.customize=Přizpůsobit
+button.restoreDefault=Původní nastavení
+button.disableAll=Vypnout vše
+button.export=Uložit
+button.import=Nahrát
 foxtrick.prefs.activeCurrencyConverter=Zapnout převodník měny
 
 delete_foxtrick_branches_ask=Opravdu chceš obnovit původní nastavení FoxTricku?\nPro obnovení musíš restartovat Firefox!
