--- a/content/locale/fy/foxtrick.properties
+++ b/content/locale/fy/foxtrick.properties
@@ -128,7 +128,7 @@ foxtrick.TeamStats.countries.label=				Lânoersjoch
 foxtrick.TeamStats.totalTSI.label=				TOTALE TSI
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=							gean nei
+button.go=							gean nei
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=							Klik op 'Opslaan' op de folgjende side om dit foarum te ferlitten.
@@ -441,12 +441,12 @@ foxtrick.prefs.captionDisableSettings=				Foxtrick útskeakelje
 foxtrick.prefs.stagepref=							Skeakelje Foxtrick út op Stage-server
 foxtrick.prefs.disableTemporaryLabel=				Foxtrick tydlik útskeakelje
 
-foxtrick.prefs.buttonSave=							Opslaan
+button.save=							Opslaan
 foxtrick.prefs.buttonCancel=						Annulearje
-foxtrick.prefs.buttonCleanupBranch=					Herstel standert
-foxtrick.prefs.buttonDisableAll=					Alles útskeakelje
-foxtrick.prefs.buttonSavePrefs=						Opslaan
-foxtrick.prefs.buttonLoadPrefs=						Ynlade
+button.restoreDefault=					Herstel standert
+button.disableAll=					Alles útskeakelje
+button.export=						Opslaan
+button.import=						Ynlade
 foxtrick.prefs.captionSkinSettings=					Eigen hattrick CSS skin
 foxtrick.prefs.skinButtonSelectFile=				Selektear CSS-bestân
 foxtrick.prefs.activeSkin=							Aktive skin
