--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -155,7 +155,7 @@ foxtrick.TeamStats.TransferListed.label=Na lista de traspasos
 foxtrick.TeamStats.Pictures.label=Imaxes
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=ir a
+button.go=ir a
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Fai clic no botón de 'Gardar' na seguinte páxina para abandoar esta conferencia
@@ -496,12 +496,12 @@ foxtrick.prefs.captionDisableSettings=Desactivar Foxtrick
 foxtrick.prefs.stagepref=Desactivar Foxtrick no servidor Stage
 foxtrick.prefs.disableTemporaryLabel=Desactivar Foxtrick temporalmente
 
-foxtrick.prefs.buttonSave=Gardar
+button.save=Gardar
 foxtrick.prefs.buttonCancel=Cancelar
-foxtrick.prefs.buttonCleanupBranch=Recuperar opcións por defecto
-foxtrick.prefs.buttonDisableAll=Desactivar todo
-foxtrick.prefs.buttonSavePrefs=Gardar
-foxtrick.prefs.buttonLoadPrefs=Cargar
+button.restoreDefault=Recuperar opcións por defecto
+button.disableAll=Desactivar todo
+button.export=Gardar
+button.import=Cargar
 foxtrick.prefs.captionSkinSettings=Pel CSS do hattrick personalizada
 foxtrick.prefs.skinButtonSelectFile=Selecciona arquivo CSS
 foxtrick.prefs.activeSkin=Pel activada
