--- a/content/locale/gr/foxtrick.properties
+++ b/content/locale/gr/foxtrick.properties
@@ -107,7 +107,7 @@ foxtrick.TeamStats.label=Επισκόπηση ομάδας
 foxtrick.TeamStats.countries.label=Επισκόπηση χώρας
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=Πήγαινε
+button.go=Πήγαινε
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Πάτα το μπουτόν 'Σώσε' στην επόμενη σελίδα για να εγκαταλείψεις την διάσκεψη.
@@ -393,12 +393,12 @@ foxtrick.prefs.captionDisableSettings=Απενεργοποίηση Foxtrick
 foxtrick.prefs.disableTemporaryLabel=Απενεργοποίησε το Foxtrick προσωρινά
 foxtrick.prefs.stagepref=Απενεργοποίηση Foxtrick στον server του stage
 
-foxtrick.prefs.buttonSave=Σώσε
+button.save=Σώσε
 foxtrick.prefs.buttonCancel=Ακύρωση
-foxtrick.prefs.buttonCleanupBranch=Επαναφορά αρχικών
-foxtrick.prefs.buttonDisableAll=Απενεργοποίηση όλων
-foxtrick.prefs.buttonSavePrefs=Σώσε
-foxtrick.prefs.buttonLoadPrefs=Φόρτωσε
+button.restoreDefault=Επαναφορά αρχικών
+button.disableAll=Απενεργοποίηση όλων
+button.export=Σώσε
+button.import=Φόρτωσε
 foxtrick.prefs.captionSkinSettings=Προσαρμοσμένο hattrick CSS skin
 foxtrick.prefs.skinButtonSelectFile=Επιλογή αρχείου CSS
 foxtrick.prefs.activeSkin=Ενεργοποιημένο skin
