--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -445,7 +445,7 @@ foxtrick.LeagueNewsFilter.PAs=Izjave za tisak
 foxtrick.ShortPAs.more=više...
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=Idi na poruku br.
+button.go=Idi na poruku br.
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Klikni na link 'Spremi' na slijedećoj stranici za napuštanje ovog foruma
@@ -907,16 +907,16 @@ foxtrick.prefs.labelFoxtrickFirstRun=Odaberite verziju za koju želite ponovni p
 foxtrick.prefs.stagepref=Isključi na pokusnom ('stage') serveru
 foxtrick.prefs.disableTemporaryLabel=Privremeno isključi
 
-foxtrick.prefs.buttonSave=Spremi
+button.save=Spremi
 foxtrick.prefs.buttonCancel=Otkaži
 foxtrick.prefs.buttonReset=Resetiraj
-foxtrick.prefs.buttonCustomize=Prilagodi
+button.customize=Prilagodi
 foxtrick.prefs.buttonSelectFile=Odaberi datoteku
 foxtrick.prefs.buttonTest=Test
-foxtrick.prefs.buttonCleanupBranch=Vrati uobičajeno
-foxtrick.prefs.buttonDisableAll=Isključi sve
-foxtrick.prefs.buttonSavePrefs=Spremi
-foxtrick.prefs.buttonLoadPrefs=Učitaj
+button.restoreDefault=Vrati uobičajeno
+button.disableAll=Isključi sve
+button.export=Spremi
+button.import=Učitaj
 foxtrick.prefs.activeCurrencyConverter=Omogući pretvarač valuta
 
 delete_foxtrick_branches_ask=Da li ste sigurni da želite vratiti uobičajena podešenja?\nFirefox je potrebno restartati!
