--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -437,7 +437,7 @@ foxtrick.LeagueNewsFilter.PAs=Sajtónyilatkozatok
 foxtrick.ShortPAs.more=több információ...
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=Indulás!
+button.go=Indulás!
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=A fórum elhagyásához kattints a „Mentés” gombra a következő oldalon
@@ -864,14 +864,14 @@ foxtrick.prefs.labelFoxtrickFirstRun=Válaszd ki azt a verziót, amelyikhez Hatt
 foxtrick.prefs.stagepref=Kikapcsolás a Stage szerveren
 foxtrick.prefs.disableTemporaryLabel=Átmeneti kikapcsolás
 
-foxtrick.prefs.buttonSave=Mentés
+button.save=Mentés
 foxtrick.prefs.buttonCancel=Mégse
 foxtrick.prefs.buttonReset=Törlés
-foxtrick.prefs.buttonCustomize=Testreszabás
-foxtrick.prefs.buttonCleanupBranch=Az alapértelmezések visszaállítása
-foxtrick.prefs.buttonDisableAll=Az összes kikapcsolása
-foxtrick.prefs.buttonSavePrefs=Mentés
-foxtrick.prefs.buttonLoadPrefs=Betöltés
+button.customize=Testreszabás
+button.restoreDefault=Az alapértelmezések visszaállítása
+button.disableAll=Az összes kikapcsolása
+button.export=Mentés
+button.import=Betöltés
 foxtrick.prefs.activeCurrencyConverter=A pénzváltó bekapcsolása
 
 delete_foxtrick_branches_ask=Biztosan vissza akarod állítani az alapértelmezett beállításokat?\nEnnek érdekében újra kell indítanod a Firefoxot!
