--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -437,7 +437,7 @@ foxtrick.LeagueNewsFilter.PAs=Comunicati stampa
 foxtrick.ShortPAs.more=altri..
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=Vai a
+button.go=Vai a
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Clicca sul pulsante 'Salva' nella prossima pagina per abbandonare il forum
@@ -901,16 +901,16 @@ foxtrick.prefs.labelFoxtrickFirstRun=Seleziona la versione a partire da cui vuoi
 foxtrick.prefs.stagepref=Disattiva Foxtrick nei server Stage
 foxtrick.prefs.disableTemporaryLabel=Disabilita temporaneamente Foxtrick
 
-foxtrick.prefs.buttonSave=Salva
+button.save=Salva
 foxtrick.prefs.buttonCancel=Annulla
 foxtrick.prefs.buttonReset=Ripristina
-foxtrick.prefs.buttonCustomize=Personalizza
+button.customize=Personalizza
 foxtrick.prefs.buttonSelectFile=Scegli file
 foxtrick.prefs.buttonTest=Test
-foxtrick.prefs.buttonCleanupBranch=Ripristina impostazioni iniziali
-foxtrick.prefs.buttonDisableAll=Disattiva tutto
-foxtrick.prefs.buttonSavePrefs=Salva
-foxtrick.prefs.buttonLoadPrefs=Carica
+button.restoreDefault=Ripristina impostazioni iniziali
+button.disableAll=Disattiva tutto
+button.export=Salva
+button.import=Carica
 foxtrick.prefs.activeCurrencyConverter=Attiva conversione valuta
 
 delete_foxtrick_branches_ask=Sei sicuro di voler ripristinare le impostazioni iniziali?\nE' necessario riavviare Firefox!
