--- a/content/locale/lb/foxtrick.properties
+++ b/content/locale/lb/foxtrick.properties
@@ -330,7 +330,7 @@ foxtrick.LeagueNewsFilter.PAs=Pressecommuniquéen
 foxtrick.ShortPAs.more=méi...
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=Dohigoen
+button.go=Dohigoen
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Klick op de Knäppchen 'Späicheren' op der nächster Säit, fir dëse Forum ze verloossen.
@@ -676,12 +676,12 @@ foxtrick.prefs.labelFoxtrickFirstRun=Déi Versioun wielen, vun där s de ënner 
 foxtrick.prefs.stagepref=FoxTrick um Stage-Server desaktivéieren
 foxtrick.prefs.disableTemporaryLabel=FoxTrick temporär desaktivéieren
 
-foxtrick.prefs.buttonSave=Späicheren
+button.save=Späicheren
 foxtrick.prefs.buttonCancel=Ofbriechen
-foxtrick.prefs.buttonCleanupBranch=Op déi normal Wäerter zrécksetzen
-foxtrick.prefs.buttonDisableAll=All ofschalten
-foxtrick.prefs.buttonSavePrefs=Späicheren
-foxtrick.prefs.buttonLoadPrefs=Lueden
+button.restoreDefault=Op déi normal Wäerter zrécksetzen
+button.disableAll=All ofschalten
+button.export=Späicheren
+button.import=Lueden
 foxtrick.prefs.captionSkinSettings=Custom hattrick CSS skin
 foxtrick.prefs.skinButtonSelectFile=CSS-Fiche wielen
 foxtrick.prefs.activeSkin=Skin aktivéieren
