--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -157,7 +157,7 @@ foxtrick.TeamStats.TransferListed.label=Pardavime
 foxtrick.TeamStats.Pictures.label=Paveikslėliai
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=Eiti į žinutę
+button.go=Eiti į žinutę
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Spauskite mygtuką 'Išsaugoti' kitame puslapyje, jeigu norite išeiti iš šio forumo.
@@ -498,12 +498,12 @@ foxtrick.prefs.captionStageSettings=Stage nustatymai
 foxtrick.prefs.stagepref=Išjungti Foxtrick Stage serveryje
 foxtrick.prefs.disableTemporaryLabel=Laikinai išjungti Foxtrick
 
-foxtrick.prefs.buttonSave=Išsaugoti
+button.save=Išsaugoti
 foxtrick.prefs.buttonCancel=Atšaukti
-foxtrick.prefs.buttonCleanupBranch=Atstatyti pradinius nustatymus
-foxtrick.prefs.buttonDisableAll=Išjungti viską
-foxtrick.prefs.buttonSavePrefs=Išsaugoti
-foxtrick.prefs.buttonLoadPrefs=Įkelti
+button.restoreDefault=Atstatyti pradinius nustatymus
+button.disableAll=Išjungti viską
+button.export=Išsaugoti
+button.import=Įkelti
 foxtrick.prefs.captionSkinSettings=Kitokia Hattrick CSS tema
 foxtrick.prefs.skinButtonSelectFile=Pasirinkite CSS failą
 foxtrick.prefs.activeSkin=Aktyvuoti temą
