--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -441,7 +441,7 @@ foxtrick.LeagueNewsFilter.PAs=Persberichten
 foxtrick.ShortPAs.more=meer..
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=Ga!
+button.go=Ga!
 
 # FoxTrickAddLeaveConfButton
 leave_conf_button_alert=Klik op de 'Save' knop op de volgende pagina om dit forum te verlaten.
@@ -902,16 +902,16 @@ foxtrick.prefs.labelFoxtrickFirstRun=Selecteer de versie waarvan je op Mijn Hatt
 foxtrick.prefs.stagepref=Schakel FoxTrick op de Stage server uit
 foxtrick.prefs.disableTemporaryLabel=Schakel FoxTrick tijdelijk uit
 
-foxtrick.prefs.buttonSave=Opslaan
+button.save=Opslaan
 foxtrick.prefs.buttonCancel=Annuleren
 foxtrick.prefs.buttonReset=Reset
-foxtrick.prefs.buttonCustomize=Aanpassen
+button.customize=Aanpassen
 foxtrick.prefs.buttonSelectFile=Selecteer bestand
 foxtrick.prefs.buttonTest=Test
-foxtrick.prefs.buttonCleanupBranch=Zet standaardinstellingen terug
-foxtrick.prefs.buttonDisableAll=Schakel alles uit
-foxtrick.prefs.buttonSavePrefs=Opslaan
-foxtrick.prefs.buttonLoadPrefs=Laden
+button.restoreDefault=Zet standaardinstellingen terug
+button.disableAll=Schakel alles uit
+button.export=Opslaan
+button.import=Laden
 foxtrick.prefs.activeCurrencyConverter=Activeer valuta omrekeningsmodule
 
 delete_foxtrick_branches_ask=Weet je zeker dat je de standaardinstellingen wilt terugzetten?\nFirefox moet hiervoor opnieuw opgestart worden!
