--- a/content/locale/nn/foxtrick.properties
+++ b/content/locale/nn/foxtrick.properties
@@ -437,7 +437,7 @@ foxtrick.LeagueNewsFilter.PAs=Pressemeldingar
 foxtrick.ShortPAs.more=meir..
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=Gå!
+button.go=Gå!
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Klikk på 'Lagre'-knappen på neste side for å forlate forumet.
@@ -902,14 +902,14 @@ foxtrick.prefs.captionFoxtrickMyHT=Foxtrick MyHT
 foxtrick.prefs.labelFoxtrickMyHT=Vel kva versjon du vil vise frå på MyHT, når noko har endra seg
 foxtrick.prefs.stagepref=Slå av på Stage-serveren
 foxtrick.prefs.disableTemporaryLabel=Slå av mellombels
-foxtrick.prefs.buttonSave=Lagre
+button.save=Lagre
 foxtrick.prefs.buttonCancel=Avbryt
 foxtrick.prefs.buttonExample=Døme
-foxtrick.prefs.buttonCustomize=Tilpass
-foxtrick.prefs.buttonCleanupBranch=Attendestill til standard
-foxtrick.prefs.buttonDisableAll=Deaktiver alle
-foxtrick.prefs.buttonSavePrefs=Lagre
-foxtrick.prefs.buttonLoadPrefs=Last inn
+button.customize=Tilpass
+button.restoreDefault=Attendestill til standard
+button.disableAll=Deaktiver alle
+button.export=Lagre
+button.import=Last inn
 foxtrick.prefs.activeCurrencyConverter=Aktiver valutaomreknar
 
 delete_foxtrick_branches_ask=Ynskjer du verkeleg å attendestille Foxtrick?\nFirefox må verte starta om att for at dette skal verke!
