--- a/content/locale/no/foxtrick.properties
+++ b/content/locale/no/foxtrick.properties
@@ -156,7 +156,7 @@ foxtrick.TeamStats.TransferListed.label=Transfer listed
 foxtrick.TeamStats.Pictures.label=Pictures
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=gå til
+button.go=gå til
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Trykk på 'Large' knappen på neste side for å forlate dette forumet
@@ -500,12 +500,12 @@ foxtrick.prefs.captionDisableSettings=Disable Foxtrick
 foxtrick.prefs.stagepref=Disable Foxtrick on Stage server
 foxtrick.prefs.disableTemporaryLabel=Disable Foxtrick temporarily
 
-foxtrick.prefs.buttonSave=Lagre
+button.save=Lagre
 foxtrick.prefs.buttonCancel=Avbryt
-foxtrick.prefs.buttonCleanupBranch=Restore defaults
-foxtrick.prefs.buttonDisableAll=Disable all
-foxtrick.prefs.buttonSavePrefs=Largre
-foxtrick.prefs.buttonLoadPrefs=Last
+button.restoreDefault=Restore defaults
+button.disableAll=Disable all
+button.export=Largre
+button.import=Last
 foxtrick.prefs.captionSkinSettings=Custom hattrick CSS skin
 foxtrick.prefs.skinButtonSelectFile=Select CSS file
 foxtrick.prefs.activeSkin=Activated skin
