--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -427,7 +427,7 @@ foxtrick.LeagueNewsFilter.PAs=Ogłoszenia prasowe
 foxtrick.ShortPAs.more=więcej...
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=Pokaż post nr
+button.go=Pokaż post nr
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Aby opuścić to forum, naciśnij przycisk 'Zapisz' na następnej stronie
@@ -891,14 +891,14 @@ foxtrick.prefs.labelFoxtrickFirstRun=Wybierz wersję wobec której chcesz zobacz
 foxtrick.prefs.stagepref=Wyłącz FoxTricka na Stage'u (wymagany restart Firefoxa)
 foxtrick.prefs.disableTemporaryLabel=Wyłącz FoxTricka czasowo
 
-foxtrick.prefs.buttonSave=Zapisz
+button.save=Zapisz
 foxtrick.prefs.buttonCancel=Anuluj
 foxtrick.prefs.buttonReset=Wyczyść
-foxtrick.prefs.buttonCustomize=Dostosuj
-foxtrick.prefs.buttonCleanupBranch=Przywróć
-foxtrick.prefs.buttonDisableAll=Wyłącz
-foxtrick.prefs.buttonSavePrefs=Eksportuj
-foxtrick.prefs.buttonLoadPrefs=Importuj
+button.customize=Dostosuj
+button.restoreDefault=Przywróć
+button.disableAll=Wyłącz
+button.export=Eksportuj
+button.import=Importuj
 foxtrick.prefs.activeCurrencyConverter=Włącz
 
 delete_foxtrick_branches_ask=Czy na pewno chcesz przywrócić domyślne ustawienia FoxTricka?\nJeśli tak, zrestartuj później Firefoxa!
