--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -425,7 +425,7 @@ foxtrick.LeagueNewsFilter.PAs=Declaratii de presa
 foxtrick.ShortPAs.more=mai multe..
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=Mergi!
+button.go=Mergi!
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Click pe butonul 'Salveaza' pe pagina urmatoare pentru a parasi acest forum.
@@ -905,14 +905,14 @@ foxtrick.prefs.stagepref=Dezactiveaza pe serverul Stage
 foxtrick.prefs.disableTemporaryLabel=Dezactiveaza temporar
 foxtrick.prefs.saved=Preferinte salvate.
 
-foxtrick.prefs.buttonSave=Salveaza
+button.save=Salveaza
 foxtrick.prefs.buttonCancel=Anuleaza
 foxtrick.prefs.buttonExample=Exemplu
-foxtrick.prefs.buttonCustomize=Modifica
-foxtrick.prefs.buttonCleanupBranch=Restaureaza implicite
-foxtrick.prefs.buttonDisableAll=Dezactiveaza toate
-foxtrick.prefs.buttonSavePrefs=Salveaza
-foxtrick.prefs.buttonLoadPrefs=Incarca
+button.customize=Modifica
+button.restoreDefault=Restaureaza implicite
+button.disableAll=Dezactiveaza toate
+button.export=Salveaza
+button.import=Incarca
 foxtrick.prefs.activeCurrencyConverter=Convertor monede(valuta) activat
 
 about.headDevelopers=Developeri proiect
