--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -414,7 +414,7 @@ foxtrick.LeagueNewsFilter.transfers=Трансферы
 foxtrick.LeagueNewsFilter.lineup_changes=Изменения расстановки
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=Перейти
+button.go=Перейти
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Нажмите на кнопку 'Сохранить' на следующей странице, чтобы отписаться от этого форума
@@ -897,13 +897,13 @@ foxtrick.prefs.saved=Настройки сохранены!
 
 foxtrick.showReleaseNotes=Показывать информацию о выпуске после обновления FoxTrick
 
-foxtrick.prefs.buttonSave=Сохранить
+button.save=Сохранить
 foxtrick.prefs.buttonCancel=Отмена
-foxtrick.prefs.buttonCustomize=Настроить
-foxtrick.prefs.buttonCleanupBranch=Восстановить по умолчанию
-foxtrick.prefs.buttonDisableAll=Отключить все
-foxtrick.prefs.buttonSavePrefs=Экспорт
-foxtrick.prefs.buttonLoadPrefs=Импорт
+button.customize=Настроить
+button.restoreDefault=Восстановить по умолчанию
+button.disableAll=Отключить все
+button.export=Экспорт
+button.import=Импорт
 foxtrick.prefs.activeCurrencyConverter=Включить конвертер валют
 
 foxtrick.versionReleaseNotes=Показать информацию о выпуске для:
