--- a/content/locale/sk/foxtrick.properties
+++ b/content/locale/sk/foxtrick.properties
@@ -433,7 +433,7 @@ foxtrick.LeagueNewsFilter.PAs=Tlačové správy
 foxtrick.ShortPAs.more=viac..
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=choď na
+button.go=choď na
 
 # FoxtrickVložiťLeaveConfButton
 leave_conf_button_alert=Pre opustenie tejto konferencie klikni na ďalšej stránke na tlačítko 'Uložiť'.
@@ -899,16 +899,16 @@ foxtrick.prefs.labelFoxtrickFirstRun=Vyber verziu, od ktorej chceš zobraziť zm
 foxtrick.prefs.stagepref=Vypnúť foxtrick pre Stage
 foxtrick.prefs.disableTemporaryLabel=Zablokovať dočasne foxtrick
 
-foxtrick.prefs.buttonSave=Uložiť
+button.save=Uložiť
 foxtrick.prefs.buttonCancel=Zrušiť
 foxtrick.prefs.buttonReset=Resetovať
-foxtrick.prefs.buttonCustomize=Prispôsobiť
+button.customize=Prispôsobiť
 foxtrick.prefs.buttonSelectFile=Vybrať súbor
 foxtrick.prefs.buttonTest=Testovať
-foxtrick.prefs.buttonCleanupBranch=Obnoviť predvolené
-foxtrick.prefs.buttonDisableAll=Zablokovať všetko
-foxtrick.prefs.buttonSavePrefs=Uložiť
-foxtrick.prefs.buttonLoadPrefs=Nahrať
+button.restoreDefault=Obnoviť predvolené
+button.disableAll=Zablokovať všetko
+button.export=Uložiť
+button.import=Nahrať
 foxtrick.prefs.captionSkinSettings=Vlastný Hattrick CSS skin
 
 delete_foxtrick_branches_ask=Určite chceš obnoviť pôvodné nastavenia Foxtricku?\nPre obnovenie musíš reštartovať Firefox!
