--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -422,7 +422,7 @@ foxtrick.LeagueNewsFilter.transfers=Tрансфери
 foxtrick.LeagueNewsFilter.lineup_changes=Промене поставе
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=Погледај поруку
+button.go=Погледај поруку
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Кликни на дугме 'Сачувај' на наредној страници да би напустио овај форум.
@@ -925,14 +925,14 @@ foxtrick.prefs.dismissNotice=(кликните да уклоните ову по
 
 foxtrick.showReleaseNotes=Прикажи поруку о променама после ажурирања Фокстрика
 
-foxtrick.prefs.buttonSave=Сачувај
+button.save=Сачувај
 foxtrick.prefs.buttonCancel=Одустани
 foxtrick.prefs.buttonExample=Пример
-foxtrick.prefs.buttonCustomize=Подеси
-foxtrick.prefs.buttonCleanupBranch=Обриши све
-foxtrick.prefs.buttonDisableAll=Искључи све
-foxtrick.prefs.buttonSavePrefs=Извези
-foxtrick.prefs.buttonLoadPrefs=Увези
+button.customize=Подеси
+button.restoreDefault=Обриши све
+button.disableAll=Искључи све
+button.export=Извези
+button.import=Увези
 foxtrick.prefs.activeCurrencyConverter=Активираj конвертор валуте
 
 foxtrick.versionReleaseNotes=Прикажи промене у верзији:
