--- a/content/locale/sv/foxtrick.properties
+++ b/content/locale/sv/foxtrick.properties
@@ -520,7 +520,7 @@ foxtrick.LeagueNewsFilter.PAs=Pressmeddelanden
 foxtrick.ShortPAs.more=mer...
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=Gå till
+button.go=Gå till
 
 # FoxtrickAddLeaveConfButton
 
@@ -996,14 +996,14 @@ foxtrick.prefs.labelFoxtrickFirstRun=Välj version som du vill visa ändringarna
 foxtrick.prefs.stagepref=Avaktivera FoxTrick på Stage
 foxtrick.prefs.disableTemporaryLabel=Avaktivera FoxTrick temporärt
 
-foxtrick.prefs.buttonSave=Spara
+button.save=Spara
 foxtrick.prefs.buttonCancel=Avbryt
 foxtrick.prefs.buttonReset=Reset
-foxtrick.prefs.buttonCustomize=Anpassa
-foxtrick.prefs.buttonCleanupBranch=Återställ standard
-foxtrick.prefs.buttonDisableAll=Avaktivera alla
-foxtrick.prefs.buttonSavePrefs=Spara
-foxtrick.prefs.buttonLoadPrefs=Ladda
+button.customize=Anpassa
+button.restoreDefault=Återställ standard
+button.disableAll=Avaktivera alla
+button.export=Spara
+button.import=Ladda
 foxtrick.prefs.captionSkinSettings=Personlig Hattick CSS-skin
 foxtrick.prefs.skinButtonSelectFile=Välj CSS fil
 foxtrick.prefs.activeSkin=Aktiverad skin
