--- a/content/locale/uk/foxtrick.properties
+++ b/content/locale/uk/foxtrick.properties
@@ -269,7 +269,7 @@ foxtrick.LeagueNewsFilter.PAs=Прес-анонси
 foxtrick.ShortPAs.more=Більше...
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=Перейти до
+button.go=Перейти до
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Натисніть кнопку 'Зберегти' на наступній сторінці, щоб покинути цей форум.
@@ -607,12 +607,12 @@ foxtrick.prefs.labelFoxtrickFirstRun=Оберіть версію, з часів 
 foxtrick.prefs.stagepref=Вимкнути FoxTrick на сервері Stage
 foxtrick.prefs.disableTemporaryLabel=Тимчасово вимкнути FoxTrick
 
-foxtrick.prefs.buttonSave=Зберегти
+button.save=Зберегти
 foxtrick.prefs.buttonCancel=Вихід
-foxtrick.prefs.buttonCleanupBranch=Скинути
-foxtrick.prefs.buttonDisableAll=Вимкнути все
-foxtrick.prefs.buttonSavePrefs=Зберегти
-foxtrick.prefs.buttonLoadPrefs=Завантажити
+button.restoreDefault=Скинути
+button.disableAll=Вимкнути все
+button.export=Зберегти
+button.import=Завантажити
 foxtrick.prefs.captionSkinSettings=Власний CSS скін
 foxtrick.prefs.skinButtonSelectFile=Обрати файл CSS скіну
 foxtrick.prefs.activeSkin=Активний скін
