--- a/content/locale/zh/foxtrick.properties
+++ b/content/locale/zh/foxtrick.properties
@@ -412,7 +412,7 @@ foxtrick.LeagueNewsFilter.transfers=转会
 foxtrick.LeagueNewsFilter.lineup_changes=修改布阵
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=前往
+button.go=前往
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=点击下一页面中的“保存”按钮以离开此论坛.
@@ -908,13 +908,13 @@ foxtrick.prefs.dismissNotice=(点击关闭)
 
 foxtrick.showReleaseNotes=在 FoxTrick 更新后显示版本发布信息
 
-foxtrick.prefs.buttonSave=保存
+button.save=保存
 foxtrick.prefs.buttonCancel=取消
-foxtrick.prefs.buttonCustomize=自定义
-foxtrick.prefs.buttonCleanupBranch=还原为默认
-foxtrick.prefs.buttonDisableAll=禁用所有
-foxtrick.prefs.buttonSavePrefs=保存
-foxtrick.prefs.buttonLoadPrefs=载入
+button.customize=自定义
+button.restoreDefault=还原为默认
+button.disableAll=禁用所有
+button.export=保存
+button.import=载入
 foxtrick.prefs.activeCurrencyConverter=启用货币转换
 
 foxtrick.versionReleaseNotes=显示发布信息:
