--- a/content/locale/ca/foxtrick.properties
+++ b/content/locale/ca/foxtrick.properties
@@ -440,7 +440,7 @@ foxtrick.LeagueNewsFilter.PAs=Notes de premsa
 foxtrick.ShortPAs.more=més…
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=Ves!
+button.go=Ves!
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Feu clic en el botó «Desa» de la següent pàgina per deixar aquest fòrum.
@@ -900,14 +900,14 @@ foxtrick.prefs.labelFoxtrickFirstRun=Mostra la versió a partir de la que voleu 
 foxtrick.prefs.stagepref=Deshabilita en el servidor stage
 foxtrick.prefs.disableTemporaryLabel=Deshabilita temporalment
 
-foxtrick.prefs.buttonSave=Desa
+button.save=Desa
 foxtrick.prefs.buttonCancel=Canceŀla
 foxtrick.prefs.buttonExample=Exemple
-foxtrick.prefs.buttonCustomize=Personalitza
-foxtrick.prefs.buttonCleanupBranch=Recupera valors per defecte
-foxtrick.prefs.buttonDisableAll=Inhabilita'ls tots
-foxtrick.prefs.buttonSavePrefs=Desa
-foxtrick.prefs.buttonLoadPrefs=Carrega
+button.customize=Personalitza
+button.restoreDefault=Recupera valors per defecte
+button.disableAll=Inhabilita'ls tots
+button.export=Desa
+button.import=Carrega
 foxtrick.prefs.activeCurrencyConverter=Activa el convertidor de moneda
 
 delete_foxtrick_branches_ask=Voleu recuperar els valors per defecte de les preferències?\nCaldrà reiniciar el firefox per activar aquest canvi.
