--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -156,7 +156,7 @@ foxtrick.TeamStats.TransferListed.label=Transfer listed
 foxtrick.TeamStats.Pictures.label=Team Photo
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=goto
+button.go=goto
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Klik på knappen 'gem' på den næste side for at forlade denne konference.
@@ -498,12 +498,12 @@ foxtrick.prefs.labelLoadPrefs=Import foxtrick preferences (Current settings may 
 foxtrick.prefs.captionDisableSettings=Disable Foxtrick
 foxtrick.prefs.stagepref=Disable Foxtrick on Stage server
 foxtrick.prefs.disableTemporaryLabel=Disable Foxtrick temporarily
-foxtrick.prefs.buttonSave=Save
+button.save=Save
 foxtrick.prefs.buttonCancel=Cancel
-foxtrick.prefs.buttonCleanupBranch=Restore defaults
-foxtrick.prefs.buttonDisableAll=Disable all
-foxtrick.prefs.buttonSavePrefs=Save
-foxtrick.prefs.buttonLoadPrefs=Load
+button.restoreDefault=Restore defaults
+button.disableAll=Disable all
+button.export=Save
+button.import=Load
 foxtrick.prefs.captionSkinSettings=Custom hattrick CSS skin
 foxtrick.prefs.skinButtonSelectFile=Select CSS file
 foxtrick.prefs.activeSkin=Activate skin
