--- a/content/locale/es/foxtrick.properties
+++ b/content/locale/es/foxtrick.properties
@@ -437,7 +437,7 @@ foxtrick.LeagueNewsFilter.PAs=Anunciós de prensa
 foxtrick.ShortPAs.more=más...
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=ir a
+button.go=ir a
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Presiona 'Guardar' en la siguiente página para abandonar este foro.
@@ -897,14 +897,14 @@ foxtrick.prefs.labelFoxtrickFirstRun=Selecciona versión desde la cual deseas qu
 foxtrick.prefs.stagepref=Deshabilitar Foxtrick en Stage
 foxtrick.prefs.disableTemporaryLabel=Deshabilitar Foxtrick temporalmente
 
-foxtrick.prefs.buttonSave=Guardar
+button.save=Guardar
 foxtrick.prefs.buttonCancel=Cancelar
 foxtrick.prefs.buttonExample=Ejemplo
-foxtrick.prefs.buttonCustomize=Personalizar
-foxtrick.prefs.buttonCleanupBranch=Restaurar valores por defecto
-foxtrick.prefs.buttonDisableAll=Deshabilitar todo
-foxtrick.prefs.buttonSavePrefs=Guardar
-foxtrick.prefs.buttonLoadPrefs=Cargar
+button.customize=Personalizar
+button.restoreDefault=Restaurar valores por defecto
+button.disableAll=Deshabilitar todo
+button.export=Guardar
+button.import=Cargar
 foxtrick.prefs.activeCurrencyConverter=Conversor de divisa activado
 
 delete_foxtrick_branches_ask=¿Seguro que quieres restaurar los valores por defecto?\n¡Firefox se reiniciará!
