--- a/content/locale/es_ca/foxtrick.properties
+++ b/content/locale/es_ca/foxtrick.properties
@@ -406,7 +406,7 @@ foxtrick.LeagueNewsFilter.PAs=Anuncios de Prensa
 foxtrick.ShortPAs.more=más..
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=Ir!
+button.go=Ir!
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Presiona 'Guardar' en la siguiente página para abandonar este foro.
@@ -870,14 +870,14 @@ foxtrick.prefs.stagepref=Desahabilitar en el servidor de Stage
 foxtrick.prefs.disableTemporaryLabel=Deshabilitar temporalmente
 foxtrick.prefs.saved=Preferencias Guardadas!
 
-foxtrick.prefs.buttonSave=Guardar
+button.save=Guardar
 foxtrick.prefs.buttonCancel=Cancelar
 foxtrick.prefs.buttonReset=Resetear
-foxtrick.prefs.buttonCustomize=Personalizar
-foxtrick.prefs.buttonCleanupBranch=Restaurar valores predeterminados
-foxtrick.prefs.buttonDisableAll=Deshabilitar todos
-foxtrick.prefs.buttonSavePrefs=Guardar
-foxtrick.prefs.buttonLoadPrefs=Cargar
+button.customize=Personalizar
+button.restoreDefault=Restaurar valores predeterminados
+button.disableAll=Deshabilitar todos
+button.export=Guardar
+button.import=Cargar
 foxtrick.prefs.activeCurrencyConverter=Habilitar convertidor de divisa
 
 about.headDevelopers=Desarrolladores en Jefe
