--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -348,7 +348,7 @@ foxtrick.LeagueNewsFilter.PAs=Press anouncements
 foxtrick.ShortPAs.more=more..
 
 #gotoPostBox
-foxtrick.GoToPostBox.label=goto
+button.go=goto
 
 # FoxtrickAddLeaveConfButton
 leave_conf_button_alert=Click on the 'Save' button on the next page to leave this forum.
@@ -696,12 +696,12 @@ foxtrick.prefs.labelFoxtrickFirstRun=Select version from which you want to have 
 foxtrick.prefs.stagepref=Disable FoxTrick on Stage server
 foxtrick.prefs.disableTemporaryLabel=Disable FoxTrick temporarily
 
-foxtrick.prefs.buttonSave=Save
+button.save=Save
 foxtrick.prefs.buttonCancel=Cancel
-foxtrick.prefs.buttonCleanupBranch=Restore defaults
-foxtrick.prefs.buttonDisableAll=Disable all
-foxtrick.prefs.buttonSavePrefs=Save
-foxtrick.prefs.buttonLoadPrefs=Load
+button.restoreDefault=Restore defaults
+button.disableAll=Disable all
+button.export=Save
+button.import=Load
 foxtrick.prefs.captionSkinSettings=Custom hattrick CSS skin
 foxtrick.prefs.skinButtonSelectFile=Select CSS file
 foxtrick.prefs.activeSkin=Activate skin
